@@ -1,6 +1,9 @@
 RC 4
 ====
 
+- Applied Marcus Widerberg's patch fixing FACILITIES-82
+  "Programmatic configuration for FactorySupport"
+
 - Apply patch from Sam Camp that fixes problems with Remoting Facility Sample and RecoverableComponent. 
 
 - Updated TypedFactoryFacility to not require a target instance
